# ollparks

./: .env.example  .firebaserc  .gitignore  Makefile.legacy  README.md  docker-compose.legacy.yml  firebase.json  index.html
backend-legacy/: Dockerfile  README.md  pyproject.toml
backend-legacy/alembic/: env.py
backend-legacy/api/: config.py  db.py  main.py
backend-legacy/api/models/: __init__.py  _mixins.py  besoin.py  bien.py  contact.py  document.py  entreprise.py  interaction.py  opportunite.py  proprietaire.py  rdv.py  user.py  visite.py
backend-legacy/api/routers/: agenda.py  auth.py  besoins.py  biens.py  contacts.py  crm.py  documents.py  entreprises.py  matching.py  opportunites.py  outlook.py  pappers.py  visial.py  visites.py
backend-legacy/api/schemas/: besoin.py  bien.py  contact.py  entreprise.py  opportunite.py  rdv.py  visite.py
backend-legacy/api/services/: auth.py
backend-legacy/api/services/documents/: __init__.py  generator.py  templates.py
backend-legacy/api/services/documents/templates/: _base.html.j2  bon_de_visite.html.j2  courrier_proprietaire.html.j2  denonce_proprietaire.html.j2  lettre_intention.html.j2  mandat.html.j2  (+3 more)
backend-legacy/api/services/matching/: __init__.py  engine.py
backend-legacy/api/services/outlook/: __init__.py  client.py  extract.py  sync.py
backend-legacy/api/services/pappers/: __init__.py  client.py  scoring.py
backend-legacy/api/services/visial/: __init__.py  client.py  sync.py
backend-legacy/scripts/: create_admin.py
backend-legacy/tests/: conftest.py  test_api_auth.py  test_api_documents.py  test_api_health.py  test_auth.py  test_documents.py  test_matching_engine.py  test_outlook_extract.py  test_pappers_scoring.py
(+66 files in other folders)
